<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="low_priority">Low Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="delete">Delete</string>
    <string name="calendar">Calendar</string>
    <string name="search">Search</string>
    <string name="search_by_title">Search Title</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="emptyMessage">Hey!! Look &#128064; there is an empty space,Let\'s fill it.</string>
    <string name="emptyNotesMessage">No Notes</string>
    <string name="add_button">Add Button</string>
    <string name="time">Time</string>
    <string name="filter">Filter</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>