<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Update"
            app:titleCentered="true"
            app:menu="@menu/top_menu"
            style="@style/Custom.ToolBar"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/up_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentBorder"
                android:hint="@string/title"
                android:padding="5dp"
                android:textSize="22sp"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/up_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:padding="5dp"
                android:hint="@string/description"
                android:background="@color/transparentBorder"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />

        <RadioGroup
            android:id="@+id/up_priority_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/up_low_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_priority" />

            <RadioButton
                android:id="@+id/up_medium_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium_priority" />

            <RadioButton
                android:id="@+id/up_high_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_priority" />

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="RtlHardcoded">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scheduleDate"
            style="@style/Widget.App.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_calendar_today_24"
            android:visibility="gone"
            app:fabSize="normal"
            tools:ignore="RtlHardcoded,UsingOnClickInXml" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scheduleTime"
            style="@style/Widget.App.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:src="@drawable/ic_outline_add_alarm_24"
            android:visibility="gone"
            app:fabSize="normal"
            tools:ignore="RtlHardcoded,UsingOnClickInXml" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelAlarm"
            style="@style/Widget.App.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:visibility="gone"
            app:fabSize="normal"
            tools:ignore="RtlHardcoded,UsingOnClickInXml" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/update"
            style="@style/Widget.App.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Add"
            app:icon="@drawable/ic_baseline_add_24"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>